--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="./public/logo/UpTrend_logo.svg" />
+		<!-- font -->
 		<style>
 			@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 		</style>
+		<!-- fontAwsome -->
+		<link 
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+			integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>UpTrend</title>
 	</head>
-  
+
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
