--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="./public/logo/UpTrend_logo.svg" />
+		<link rel="icon" type="image/svg+xml" href="/logo/UpTrend_logo.svg" />
 		<!-- font -->
 		<style>
 			@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
